Update link for scheduling consultation in footer

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                 <ul class="rodape-links">
                     <li><a href="#sobre">Sobre Mim</a></li>
                     <li><a href="#planos">Planos</a></li>
-                    <li><a href="#contato">Agendar Consulta</a></li>
+                    <li><a href="#btn-agendamento">Agendar Consulta</a></li>
                 </ul>
             </div>
 
